syntax = "proto3";

package rs.ac.uns.ftn.grpc;
option csharp_namespace = "EPrescriptionApi.Protos";
import "Protos/model.proto";

service NetGrpcService {
  rpc transfer (MessageProto) returns (MessageResponseProto);
}